--- a/styles.css
+++ b/styles.css
@@ -330,8 +330,8 @@
             #0d3628 10%,
             #112d2a 30%,
             #14292b 60%,
-            #17252e 90%,
-            #62716f 90%,
+            #17252e calc(100% - 16px),
+            #62716f calc(100% - 16px),
             #62716f 100%
         );
     background-size: 12px 43px, 10px 43px, 100% 100%;
