--- a/styles.css
+++ b/styles.css
@@ -241,10 +241,10 @@
 [data-tab-content="skills"] {
     background: linear-gradient(
         to right,
-        #0d3628 0%,
-        #112d2a 30%,
-        #14292b 60%,
-        #17252e 100%
+        #053a5a 0%,
+        #051f2e 33%,
+        #0b2f23 66%,
+        #172532 100%
     );
     position: relative;
 }
@@ -299,11 +299,10 @@
 [data-tab-content="settings"] {
     background: linear-gradient(
         to bottom,
-        #90511d 0%,
-        #5a3010 25%,
-        #2a1808 50%,
-        #0d0d12 75%,
-        #0d0d12 100%
+        #99673f 0%,
+        #7c4618 33%,
+        #412710 66%,
+        #432912 100%
     );
 }
 
@@ -505,11 +504,10 @@
 [data-tab-content="cabinet"] {
     background: linear-gradient(
         to bottom,
-        #b69a59 0%,
-        #7a6d3d 20%,
-        #4a5040 40%,
-        #263032 70%,
-        #263032 100%
+        #182223 0%,
+        #27322e 33%,
+        #795d36 66%,
+        #94935a 100%
     );
 }
 
@@ -586,9 +584,11 @@
 [data-tab-content="profiles"] {
     background: linear-gradient(
         to bottom,
-        #182224 0%,
-        #2a2820 50%,
-        #402e1d 100%
+        #192229 0%,
+        #283a3e 25%,
+        #42311f 50%,
+        #4a3c21 75%,
+        #181714 100%
     );
 }
 
